[tool.poetry]
name = "oxygenbnb-backend"
version = "0.1.0"
description = ""
authors = ["Nayeon Shin <dev.nayeon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
